--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -51,11 +51,81 @@
       flex: 1;
     }
   }
+
+
+
 </style>
 {% block content %}
-<div class="row row-cols-1 row-cols-md-3 g-4 mt-5 me-0">
 
-  <!-- Development Center -->
+  <div class="container py-5">
+  <div class="row align-items-start">
+    
+    <!-- 🌐 Left Side Content -->
+    <div class="col-lg-6 mb-4">
+      <h2 class="fw-bold">Reach Out, Get In Touch</h2>
+      <p class="text-muted">
+        Have questions about <strong>Neemkaroli Technologies</strong>? We’re here to help. Please reach out.<br>
+        We’d love to hear from you.
+      </p>
+      <img src="https://images.squarespace-cdn.com/content/v1/5a38229c9f07f5aac269670d/1527046821246-QVOZHUS9T923UQ4WVUSV/image-asset.jpeg" alt="Contact" class="img-fluid rounded mb-4" style="height: 300px;">
+      <h5>Social Media</h5>
+      <div class="d-flex gap-3">
+        <a href="https://www.facebook.com/profile.php?id=61577864141320"><i class="bi bi-facebook fs-4 text-dark">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+          <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+          </svg></i></a>
+        <a href="https://www.linkedin.com/company/neemkaroli-technologies/?viewAsMember=true"><i class="bi bi-linkedin fs-4 text-dark">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-linkedin " viewBox="0 0 16 16">
+          <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+          </svg></i></a>
+        <a href="#"><i class="bi bi-instagram fs-4 text-dark">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+          <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+          </svg></i></a>
+      </div>
+    </div>
+
+    <!-- ✉️ Right Side Form -->
+    <div class="col-lg-6">
+      <h3 class="mb-4">Have A Question?</h3>
+      <form method="POST" action="#">
+        {% csrf_token %}
+        
+        <div class="mb-3">
+          {{ myData.name.label_tag }}
+          {{ myData.name }}
+        </div>
+
+        <div class="mb-3">
+          {{ myData.email.label_tag }}
+          {{ myData.email }}
+        </div>
+
+        <div class="mb-3">
+          {{ myData.phone.label_tag }}
+          {{ myData.phone }}
+        </div>
+
+        <div class="mb-3">
+          {{ myData.designation.label_tag }}
+          {{ myData.designation }}
+        </div>
+        <div class="mb-3">
+          {{ myData.message.label_tag }}
+          {{ myData.message }}
+        </div>
+
+        <button class="btn btn-outline-dark w-100">Submit</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class="row row-cols-1 row-cols-md-3 g-4 mt-5 me-0">
   <div class="col">
     <div class="card">
       <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d112071.03445292752!2d77.384044!3d28.623173!3m2!1i1024!2i768!4f13.1!2m1!1sSuite%3A402%2C%20H-149%20Sector%2063%2C%20Noida%2C%20India!5e0!3m2!1sen!2sus!4v1752229221438!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
@@ -67,14 +137,12 @@
           </svg>
           <span>Suite:402, H-149 Sector 63,<br>Noida, India (201301)</span>
         </div>
-
         <div class="info-row">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
         <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
         </svg>
           <span>sales@neemkarolitechnologies.com</span>
         </div>
-
         <div class="info-row">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
           <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
@@ -84,11 +152,9 @@
       </div>
     </div>
   </div>
-
-  <!-- Training Center -->
   <div class="col">
     <div class="card">
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d111340.83365782215!2d79.48828549271734!3d29.29990926641026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sNeemkaroli%20House%2C%20Haldwani%20Uttarakhand%20%3A%20262139!5e0!3m2!1sen!2sus!4v1752228521667!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3154.089629422328!2d144.9203218752423!3d-37.764496531222804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65cf3888b3701%3A0x78ee489e1edcec8f!2s701%20Mt%20Alexander%20Rd%2C%20Moonee%20Ponds%20VIC%203039%2C%20Australia!5e0!3m2!1sen!2sus!4v1752232126350!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
       <div class="card-body">
         <h5 class="card-title text-center"><b>Training Center</b></h5>
 
@@ -113,8 +179,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Sales Office -->
   <div class="col">
     <div class="card">
       <iframe class="map" src="https://www.google.com/maps/embed?pb=..." allowfullscreen loading="lazy"></iframe>
